# onvif-events-telegram

./: .gitignore  .gitmodules  Cargo.toml  README.md  config.yaml.example
src/: config.rs  main.rs  onvif_camera_client.rs  telegram_client.rs
src/onvif/: mod.rs  onvif_camera.rs  onvif_client.rs  onvif_clients.rs
src/repository/: db_store.rs  memory_repository.rs  mod.rs
src/telegram/: mod.rs  telegram_client.rs
