[package]
name = "onvif-events-telegram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onvif = { git = "https://github.com/lumeohq/onvif-rs", rev = "1b1e6fd" }
recording = { git = "https://github.com/lumeohq/onvif-rs", rev = "1b1e6fd" }
replay = { git = "https://github.com/lumeohq/onvif-rs", rev = "1b1e6fd" }
search = { git = "https://github.com/lumeohq/onvif-rs", rev = "1b1e6fd" }
schema = { git = "https://github.com/lumeohq/onvif-rs", rev = "1b1e6fd" }
xsd-types = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "7f3d433" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
url = "2.2.0"
serde_yaml = "0.9.34"
log = "0.4.22"
serde = "1.0.207"
pretty_env_logger = "0.5.0"
reqwest = "0.12.7"
# rustygram = "0.1.4"
rustygram = { path = "./rustygram" }
